# qoms

./: build.sh
other/: qoms.service
qoms/: Cargo.toml
qoms/src/: common.rs  consts.rs  main.rs  prelude.rs
qoms/src/threads/: greetd.rs  login.rs  mod.rs  power.rs  qinit.rs  qoms_socket.rs
qoms_coms/: Cargo.toml
qoms_coms/src/: lib.rs
qoms_coms_bin/: Cargo.toml
qoms_coms_bin/src/: main.rs
scripts/: get_sock.sh
