[package]
name = "qoms"
version = "0.1.0"
edition = "2024"

[dependencies]
# Rust
tokio = { version = "1.47.1", features = ["full"] }

# Logs & CLI
log = "0.4.27"
env_logger = "0.11.8"
color-eyre = "0.6" # CLI anyhow

# Greetd
greetd_ipc = { version = "0.10.3", features = ["tokio", "tokio-codec"] }
