[package]
name = "qoms"
version = "0.1.0"
edition = "2024"

[dependencies]
# Rust
tokio = { version = "1.47.1", features = ["full"] }

# Logs & CLI
log = "0.4.27"
env_logger = "0.11.8"
color-eyre = "0.6" # CLI anyhow

# Login in
greetd_ipc = { version = "0.10.3", features = ["tokio", "tokio-codec"] }
libquillcom = { path = "../../../../common/libquillcom/" }
postcard = { version = "1.1.3", features = ["postcard-derive", "alloc"] }
serde = "1.0.219"
